@@ -1,0 +1,12 @@
+        list p=12f1822
+
+        code
+; HIGH
+        data  HIGH table_code
+        data  HIGH table_data
+
+table_code
+
+        udata
+table_data res 1
+        end
